--- a/src/app/pages/welcome/button-menu/button-menu.component.html
+++ b/src/app/pages/welcome/button-menu/button-menu.component.html
@@ -1,12 +1,15 @@
-<mat-card routerLink="/informacion">
+<mat-card>
+  <h1>Accesos directos</h1>
   <div>
-    <h1>Informacion variada de distintas fuentes</h1>
     <button mat-raised-button color="primary" routerLink="/informacion">Documentacion</button>
   </div>
-</mat-card>
-<mat-card routerLink="/aeronaves">
   <div>
-    <h1>Manuales e informacion de las aeronaves del club</h1>
     <button mat-raised-button color="primary" routerLink="/aeronaves">Aeronaves</button>
+  </div>
+  <div>
+    <button mat-raised-button color="primary" routerLink="/actividades">Actividades</button>
+  </div>
+  <div>
+    <button mat-raised-button color="primary" routerLink="/contacto">Contacto</button>
   </div>
 </mat-card>
