--- a/src/app/pages/welcome/image-parallax/image-parallax.component.html
+++ b/src/app/pages/welcome/image-parallax/image-parallax.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h1>Sitio de informacion</h1>
+  <h1>Club de planeadores Tandil</h1>
   <img class="logo-centered" src="./assets/Logo-CPT-Twin.svg" />
 </div>
