--- a/src/app/pages/welcome/social-card/social-card.component.html
+++ b/src/app/pages/welcome/social-card/social-card.component.html
@@ -4,10 +4,10 @@
     <img src="./assets/svg/instagram.svg" />
     <span>clubdeplaneadorestandil</span>
   </a>
-  <a mat-raised-button color="primary" href="https://www.facebook.com/CPTandil">
+  <!-- <a mat-raised-button color="primary" href="https://www.facebook.com/CPTandil">
     <img src="./assets/svg/facebook.svg" />
     <span>clubdeplaneadorestandil</span>
-  </a>
+  </a> -->
   <a mat-raised-button color="primary" href="mailto: clubplaneadores.tandil@gmail.com">
     <img src="./assets/svg/mail.svg" />
     <span>clubplaneadores.tandil@gmail.com</span>
