--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,18 +1,8 @@
 div {
+  margin: 5rem;
   display: flex;
   flex-direction: column;
-  align-content: center;
-  justify-content: space-around;
+  align-content: space-around;
   align-items: center;
-  app-image-parallax {
-    width: 100vw;
-  }
-  app-social-card {
-    margin: 5rem;
-    width: 80vw;
-  }
-  app-map-card {
-    margin: 10px;
-    width: 80vw;
-  }
+  flex-wrap: wrap;
 }
