--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -6,6 +6,8 @@
     <button mat-menu-item routerLink="/">Inicio</button>
     <button mat-menu-item routerLink="/informacion">Informacion</button>
     <button mat-menu-item routerLink="/aeronaves">Aeronaves</button>
+    <button mat-menu-item routerLink="/actividades">Actividades</button>
+    <button mat-menu-item routerLink="/contacto">Contacto</button>
   </mat-menu>
 
   <a mat-button class="buttonName text" routerLink="/"> Club de Planeadores Tandil </a>
@@ -13,7 +15,9 @@
 
   <div class="hide-display-mobile text">
     <a mat-button routerLink="/">Inicio</a>
-    <a mat-button routerLink="/informacion">Informacion</a>
+    <a mat-button routerLink="/informacion">Documentacion</a>
     <a mat-button routerLink="/aeronaves">Aeronaves</a>
+    <a mat-button routerLink="/actividades">Actividades</a>
+    <a mat-button routerLink="/contacto">Contacto</a>
   </div>
 </mat-toolbar>
