--- a/src/app/pages/welcome/button-menu/button-menu.component.scss
+++ b/src/app/pages/welcome/button-menu/button-menu.component.scss
@@ -1,12 +1,12 @@
 mat-card {
-  opacity: 0.9;
-  background: #878e914a;
+  background: #878e91da;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: flex-start;
+  flex-direction: row;
+  justify-content: space-around;
   margin: 10px;
   padding: 10px;
+  width: fit-content;
   div {
     display: flex;
     align-items: center;
