--- a/src/app/pages/welcome/image-parallax/image-parallax.component.scss
+++ b/src/app/pages/welcome/image-parallax/image-parallax.component.scss
@@ -8,12 +8,7 @@ div {
   align-items: center;
   align-content: space-around;
   .logo-centered {
+    margin: 20px;
     width: 20rem;
-  }
-}
-
-@media only screen and (max-width: 951px) {
-  h1 {
-    display: none;
   }
 }
