instagram feed added

--- a/src/app/pages/welcome/social-card/social-card.component.scss
+++ b/src/app/pages/welcome/social-card/social-card.component.scss
@@ -1,9 +1,7 @@
 mat-card {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   background: #878e91da;
-  align-items: center;
   width: fit-content;
   padding: 10px;
   a {
