--- a/src/app/pages/welcome/button-menu/button-menu.component.scss
+++ b/src/app/pages/welcome/button-menu/button-menu.component.scss
@@ -1,9 +1,7 @@
 mat-card {
   background: #878e91da;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
   margin: 10px;
   padding: 10px;
   width: fit-content;
