--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,6 +1,9 @@
 <div>
   <app-image-parallax></app-image-parallax>
   <h2>¡Bienvenido al sitio web del club, aqui encontraras toda la informacion necesaria para realizar la actividad!</h2>
-  <app-button-menu></app-button-menu>
-  <app-social-card></app-social-card>
+  <div>
+    <app-button-menu></app-button-menu>
+    <app-instagram-feed></app-instagram-feed>
+    <app-social-card></app-social-card>
+  </div>
 </div>
