--- a/src/app/pages/gliders/glider/glider.component.html
+++ b/src/app/pages/gliders/glider/glider.component.html
@@ -6,7 +6,7 @@
         {{ glider.model }} -
         {{ glider.designator }}
       </h1>
-      <img mat-card-image src="{{ glider.image }}" alt="Card image" onError="this.src='./assets/logo.png'" />
+      <img mat-card-image srcset="{{ glider.image }}" alt="Card image" onError="this.src='./assets/logo.png'" />
 
       <h1>{{ glider.description }}</h1>
 
