--- a/src/app/pages/welcome/button-menu/button-menu.component.html
+++ b/src/app/pages/welcome/button-menu/button-menu.component.html
@@ -1,7 +1,7 @@
 <mat-card>
   <h1>Accesos directos</h1>
   <div>
-    <button mat-raised-button color="primary" routerLink="/informacion">Documentacion</button>
+    <button mat-raised-button color="primary" routerLink="/documentacion">Documentacion</button>
   </div>
   <div>
     <button mat-raised-button color="primary" routerLink="/aeronaves">Aeronaves</button>
