--- a/src/app/pages/welcome/social-card/social-card.component.html
+++ b/src/app/pages/welcome/social-card/social-card.component.html
@@ -1,15 +1,13 @@
 <mat-card>
   <h1>Nuestras redes</h1>
-  <a mat-raised-button color="primary" href="https://www.instagram.com/clubdeplaneadorestandil/">
-    <img src="./assets/svg/instagram.svg" />
-    <span>clubdeplaneadorestandil</span>
-  </a>
-  <!-- <a mat-raised-button color="primary" href="https://www.facebook.com/CPTandil">
-    <img src="./assets/svg/facebook.svg" />
-    <span>clubdeplaneadorestandil</span>
-  </a> -->
-  <a mat-raised-button color="primary" href="mailto: clubplaneadores.tandil@gmail.com">
-    <img src="./assets/svg/mail.svg" />
-    <span>clubplaneadores.tandil@gmail.com</span>
-  </a>
+  <div>
+    <a mat-raised-button color="primary" href="https://www.instagram.com/clubdeplaneadorestandil/">
+      <img src="./assets/svg/instagram.svg" />
+      <span>clubdeplaneadorestandil</span>
+    </a>
+    <a mat-raised-button color="primary" href="mailto: clubplaneadores.tandil@gmail.com">
+      <img src="./assets/svg/mail.svg" />
+      <span>clubplaneadores.tandil@gmail.com</span>
+    </a>
+  </div>
 </mat-card>
