--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item routerLink="/">Inicio</button>
-    <button mat-menu-item routerLink="/informacion">Informacion</button>
+    <button mat-menu-item routerLink="/documentacion">Documentacion</button>
     <button mat-menu-item routerLink="/aeronaves">Aeronaves</button>
     <button mat-menu-item routerLink="/actividades">Actividades</button>
     <button mat-menu-item routerLink="/contacto">Contacto</button>
@@ -15,7 +15,7 @@
 
   <div class="hide-display-mobile text">
     <a mat-button routerLink="/">Inicio</a>
-    <a mat-button routerLink="/informacion">Documentacion</a>
+    <a mat-button routerLink="/documentacion">Documentacion</a>
     <a mat-button routerLink="/aeronaves">Aeronaves</a>
     <a mat-button routerLink="/actividades">Actividades</a>
     <a mat-button routerLink="/contacto">Contacto</a>
