--- a/src/app/pages/welcome/social-card/social-card.component.scss
+++ b/src/app/pages/welcome/social-card/social-card.component.scss
@@ -1,14 +1,20 @@
 mat-card {
   display: flex;
   flex-direction: column;
-  background: #878e91da;
+  background: rgba(135, 142, 145, 0.8549019608);
   width: fit-content;
+  align-items: center;
   padding: 10px;
-  a {
-    margin: 10px;
-    text-decoration: none;
-    img {
-      margin: 0px 10px -3px 10px;
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    a {
+      margin: 10px;
+      text-decoration: none;
+      img {
+        margin: 0px 10px -3px 10px;
+      }
     }
   }
 }
