--- a/src/app/pages/activities/activities.component.html
+++ b/src/app/pages/activities/activities.component.html
@@ -1,3 +1,5 @@
+<app-image-parallax [text]="'Actividades'"></app-image-parallax>
+
 <div>
   <mat-card>
     <h1>Vuelo de bautismo</h1>
@@ -16,7 +18,7 @@
   <mat-card>
     <h1>Escuela de vuelo</h1>
     <h1>Curso de piloto de planedor (PPL)</h1>
-    <p>El curso de piloto de planeador comienza generalmente en el mes de Marzo, y se desarrolla generalmente sabados, domingos y feriados./p></p>
+    <p>El curso de piloto de planeador comienza generalmente en el mes de Marzo, y se desarrolla generalmente sabados, domingos y feriados.</p>
     <p>
       Es importante contar con disponibilidad horaria para realizar el mismo, la actividad es grupal y por lo tanto depende de todos los socios para
       funcionar.
