--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -1,5 +1,6 @@
+<app-image-parallax [text]="'En esta pagina se recopila informacion de utilidad para el piloto'"></app-image-parallax>
+
 <div>
-  <h1>En esta pagina se recopila informacion de utilidad para el piloto</h1>
   <mat-card>
     <h2>Documentacion para pilotos</h2>
     <div>
