--- a/src/app/pages/welcome/image-parallax/image-parallax.component.html
+++ b/src/app/pages/welcome/image-parallax/image-parallax.component.html
@@ -1,4 +1,6 @@
 <div>
-  <h1>Club de planeadores Tandil</h1>
-  <img class="logo-centered" src="./assets/Logo-CPT-Twin.svg" />
+  <span>
+    <img class="logo-centered" src="./assets/Logo-CPT-Twin.svg" />
+  </span>
+  <h2>{{ text }}</h2>
 </div>
