--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -10,11 +10,12 @@
       align-items: center;
     }
     div {
+      margin: 15px;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
     }
   }
 }
@@ -29,11 +30,12 @@
       text-align: center;
     }
     div {
+      margin: 15px;
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: center;
       align-items: center;
+      justify-content: center;
     }
   }
 }
