--- a/src/app/shared/components/instagram-feed/instagram-feed.component.scss
+++ b/src/app/shared/components/instagram-feed/instagram-feed.component.scss
@@ -1,9 +1,10 @@
-mat-card{
+mat-card {
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   margin: 25px;
-  iframe{
+  iframe {
     padding: 5px;
 
     border: none;
-    border:0;
+    border: 0;
   }
 }
