--- a/src/app/pages/gliders/glider/glider.component.scss
+++ b/src/app/pages/gliders/glider/glider.component.scss
@@ -1,20 +1,18 @@
 mat-drawer-container {
-  width: 100vw;
-  height: 100vh;
-  margin: 10px;
-  background: #878e914a;
+  background: none;
   mat-drawer {
     background: #878e91da;
+    margin: 2rem;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   }
   mat-drawer-content {
     mat-card {
       align-items: center;
       background: #878e91da;
-      margin: 1rem;
-      padding: 0.5rem;
+      margin: 2rem;
       img {
         align-self: center;
-        border: 1px solid black;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
         width: 20rem;
         border-radius: 5px;
       }
@@ -27,6 +25,7 @@ mat-drawer-container {
         text-decoration: none;
         img {
           margin: auto;
+          box-shadow: 0px 25px 20px -20px rgba(0, 0, 0, 0.45);
           height: 30px;
           width: 30px;
           border: 0;
