--- a/src/app/pages/activities/activities.component.html
+++ b/src/app/pages/activities/activities.component.html
@@ -31,14 +31,45 @@
         autorización de los padres, certificada ante un escribano.
       </li>
       <li>
-        Un examen psicofísico de alumno piloto de planeador en el INMAE (Instituto Nacional de Medicina Aeronáutica y Espacial), o ante Médico
-        Examinador Aeronáutico.
+        <p>Poseer la Certificación Médica Aeronáutica (CMA) que es un exámen psicofísico.</p>
+        <p>
+          Actualmente se puede efectuar en el Instituto Nacional de Medicina Aeroespacial (INMAE), y también en Médicos Examinadores Aeronáuticos
+          (AME) o por Centros Médicos Aeronáuticos Examinadores (CMAE). Para INMAE, debe solicitar turno vía web en
+          <a href="https://www.inmae.ar/">https://www.inmae.ar/</a>. Para AME / CMAE consulte el listado de opciones de lugares en el sitio de ANAC
+          <a href="https://www.argentina.gob.ar/anac/certificacion-medica-aeronautica-cma"
+            >https://www.argentina.gob.ar/anac/certificacion-medica-aeronautica-cma</a
+          >
+        </p>
       </li>
-      <li>Asociarse al club de planeadores Tandil.(Solicitar planilla en secretaría)</li>
+      <li>Asociarse al club de planeadores Tandil. (Solicitar planilla en secretaría)</li>
     </ul>
     <p>
       El curso consta de un mínimo de 40 clases/remolques. Cada clase dura una jornada completa, en la que además del vuelo que hagas con el
       instructor, recibís instrucción teórica, meteorológica, de seguridad, etc.
     </p>
+    <p>Se recomienda tener disponibilidad sabados, domingos y feriados para realizar el curso.</p>
+
+    <h2>Requisitos y obligaciones del alumno piloto durante el curso</h2>
+    <ul>
+      <li>Estar al día con la cuota social del Club.</li>
+      <li>Estar al día con el pago de los vuelos realizados.</li>
+      <li>Estudio del manual de vuelo del planeador a utilizar y otros documentos que le sean requeridos por el Instructor a cargo.</li>
+      <li>Participar el briefing que podrá dar el Instructor al comenzar la actividad.</li>
+      <li>
+        Participar en la limpieza y chequeo del planeador previo al vuelo y notificar sobre cualquier novedad que detecte en el material de vuelo.
+      </li>
+      <li>Colaborar con el traslado del material de vuelo hasta la cabecera.</li>
+      <li>
+        Oficiar de planillero y responsable de la radio base cuando le corresponda, asegurando el correcto registro de los vuelos y una atención
+        constante sobre la frecuencia y la operación del aeródromo.
+      </li>
+      <li>
+        Asistir con la operación de vuelo en la cabecera, buscando la soga, en la preparación al vuelo a otras personas, como señalero, corriendo el
+        ala del planeador, y cualquier otra actividad que le sea requerida para desarrollar la normal actividad de vuelo.
+      </li>
+      <li>Colaborar con el hangaraje al finalizar la actividad del día.</li>
+      <li>El alumno piloto asume la responsabilidad de asistir con regularidad. De no cumplir este punto.</li>
+      <li>Limpieza y mantenimiento que le sean requeridas en las instalaciones del Club.</li>
+    </ul>
   </mat-card>
 </div>
