--- a/src/app/pages/gliders/info-card/info-card.component.scss
+++ b/src/app/pages/gliders/info-card/info-card.component.scss
@@ -1,5 +1,5 @@
 mat-card {
-  background-color: #c8e6c9;
+  background-color: #b3dbef;
   margin: 15px;
   max-width: fit-content;
   max-height: fit-content;
