--- a/src/app/pages/welcome/image-parallax/image-parallax.component.scss
+++ b/src/app/pages/welcome/image-parallax/image-parallax.component.scss
@@ -12,6 +12,6 @@ div {
   }
   background: no-repeat center url('/assets/fondo.jpg');
   background-size: cover;
-  box-shadow: 0 29px 52px rgba(0, 0, 0, 0.4), 0 25px 16px rgba(0, 0, 0, 0.2);
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   overflow: scroll;
 }
