fix manuales cirrus

--- a/src/app/pages/activities/activities.component.html
+++ b/src/app/pages/activities/activities.component.html
@@ -68,7 +68,7 @@
         ala del planeador, y cualquier otra actividad que le sea requerida para desarrollar la normal actividad de vuelo.
       </li>
       <li>Colaborar con el hangaraje al finalizar la actividad del día.</li>
-      <li>El alumno piloto asume la responsabilidad de asistir con regularidad. De no cumplir este punto.</li>
+      <li>El alumno piloto asume la responsabilidad de asistir con regularidad.</li>
       <li>Limpieza y mantenimiento que le sean requeridas en las instalaciones del Club.</li>
     </ul>
   </mat-card>
