--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -2,14 +2,22 @@
 
 <div>
   <mat-card>
+    <h2>Documentacion del Club</h2>
+    <div>
+      <a href="https://drive.google.com/file/d/1tDsHdvHYYGiOpH-tZFLqJ2DeJC1_VQAL/view?usp=drive_link" mat-raised-button color="primary">
+        Reglamento de vuelo club de planeadores Tandil - 2024</a
+      >
+      <a href="https://drive.google.com/file/d/1z60-V0nCgIoD7OtntvR3VtaBm_I9jvcT/view?usp=drive_link" mat-raised-button color="primary">
+        Planilla de vuelo - 2024</a
+      >
+    </div>
+  </mat-card>
+  <mat-card>
     <h2>Documentacion para pilotos</h2>
     <div>
       <a href="https://www.argentina.gob.ar/sites/default/files/manual-de-instruccion-de-vuelo-a-vela-1.pdf" mat-raised-button color="primary">
         Manual de Instrucción de Vuelo a Vela - Favav
       </a>
-      <a href="https://drive.google.com/file/d/1dYa1O2nQL5PW4fUpBOrzSwkQoMTY0Dxz/view?usp=drive_link" mat-raised-button color="primary">
-        Reglamento de vuelo club de planeadores Tandil</a
-      >
       <a href="https://drive.google.com/file/d/1qhckW0RjmD82cZaAHIYfyODImj2PlNRF/view?usp=drive_link" mat-raised-button color="primary">
         Tabla de conversion horas</a
       >
