angular update and visual changes v2.0

--- a/src/app/pages/welcome/button-menu/button-menu.component.html
+++ b/src/app/pages/welcome/button-menu/button-menu.component.html
@@ -1,15 +1,14 @@
 <mat-card>
-  <h1>Accesos directos</h1>
   <div>
-    <button mat-raised-button color="primary" routerLink="/documentacion">Documentacion</button>
+    <button mat-raised-button color="primary" routerLink="/documentacion">Enlace a documentacion</button>
   </div>
   <div>
-    <button mat-raised-button color="primary" routerLink="/aeronaves">Aeronaves</button>
+    <button mat-raised-button color="primary" routerLink="/aeronaves">Enlace a Aeronaves</button>
   </div>
   <div>
-    <button mat-raised-button color="primary" routerLink="/actividades">Actividades</button>
+    <button mat-raised-button color="primary" routerLink="/actividades">Enlace a Actividades</button>
   </div>
   <div>
-    <button mat-raised-button color="primary" routerLink="/contacto">Contacto</button>
+    <button mat-raised-button color="primary" routerLink="/contacto">Enlace a Contacto</button>
   </div>
 </mat-card>
