--- a/src/app/pages/welcome/social-card/social-card.component.scss
+++ b/src/app/pages/welcome/social-card/social-card.component.scss
@@ -1,7 +1,7 @@
 mat-card {
   display: flex;
   flex-direction: column;
-  background: rgba(135, 142, 145, 0.8549019608);
+  background:  #4d77b6;
   width: fit-content;
   align-items: center;
   padding: 10px;
