--- a/src/app/shared/components/instagram-feed/instagram-feed.component.scss
+++ b/src/app/shared/components/instagram-feed/instagram-feed.component.scss
@@ -1,10 +1,15 @@
-mat-card {
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  margin: 25px;
+div {
+  width: 100vw;
+  height: 40em;  
+  min-height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
   iframe {
-    padding: 5px;
-
-    border: none;
+    width: 80vw;
+    height: 90%;
+    min-height: 200px;
     border: 0;
   }
 }
