--- a/src/app/pages/welcome/social-card/social-card.component.html
+++ b/src/app/pages/welcome/social-card/social-card.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <h1>Nuestras redes</h1>
+  <h1>Contacto</h1>
   <div>
     <a mat-raised-button color="primary" href="https://www.instagram.com/clubdeplaneadorestandil/">
       <img src="./assets/svg/instagram.svg" />
@@ -7,7 +7,7 @@
     </a>
     <a mat-raised-button color="primary" href="mailto: clubplaneadores.tandil@gmail.com">
       <img src="./assets/svg/mail.svg" />
-      <span>clubplaneadores.tandil@gmail.com</span>
+      <span>clubplaneadores.tandil&#64;gmail.com</span>
     </a>
   </div>
 </mat-card>
