--- a/src/app/pages/contact/contact.component.scss
+++ b/src/app/pages/contact/contact.component.scss
@@ -13,6 +13,7 @@ div {
     align-items: center;
     justify-content: space-around;
     a {
+      color: black;
       margin: 10px;
       text-decoration: none;
     }
