--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -4,32 +4,29 @@
   <mat-card>
     <h2>Documentacion del Club</h2>
     <div>
-      <a href="https://drive.google.com/file/d/1tDsHdvHYYGiOpH-tZFLqJ2DeJC1_VQAL/view?usp=drive_link" mat-raised-button color="primary">
-        Reglamento de vuelo club de planeadores Tandil - 2024</a
-      >
-      <a href="https://drive.google.com/file/d/1z60-V0nCgIoD7OtntvR3VtaBm_I9jvcT/view?usp=drive_link" mat-raised-button color="primary">
-        Planilla de vuelo - 2024</a
-      >
+      <a href="https://drive.google.com/file/d/1tDsHdvHYYGiOpH-tZFLqJ2DeJC1_VQAL/view?usp=drive_link" mat-raised-button
+        color="primary">
+        Reglamento de vuelo club de planeadores Tandil - 2024</a>
+      <a href="https://drive.google.com/file/d/1z60-V0nCgIoD7OtntvR3VtaBm_I9jvcT/view?usp=drive_link" mat-raised-button
+        color="primary">
+        Planilla de vuelo - 2024</a>
     </div>
   </mat-card>
   <mat-card>
     <h2>Documentacion para pilotos</h2>
     <div>
-      <a href="https://www.argentina.gob.ar/sites/default/files/manual-de-instruccion-de-vuelo-a-vela-1.pdf" mat-raised-button color="primary">
+      <a href="https://www.argentina.gob.ar/sites/default/files/manual-de-instruccion-de-vuelo-a-vela-1.pdf"
+        mat-raised-button color="primary">
         Manual de Instrucción de Vuelo a Vela - Favav
       </a>
-      <a href="https://drive.google.com/file/d/1qhckW0RjmD82cZaAHIYfyODImj2PlNRF/view?usp=drive_link" mat-raised-button color="primary">
-        Tabla de conversion horas</a
-      >
-      <a href="https://drive.google.com/file/d/1LYlIs--LPWiA-SaU9Jk6SF5Rc5FyVn1x/view?usp=drive_link" mat-raised-button color="primary">
-        Instrucciones Libreta</a
-      >
-      <a
-        href="https://docs.google.com/document/d/1CaAFRGCPyxhfLDtJZvqBvJ6lh3a5sxr9/edit?usp=sharing&ouid=103201391362993953479&rtpof=true&sd=true"
-        mat-raised-button
-        color="primary"
-        >Como sobrevivir al vuelo a vela</a
-      >
+      <a href="https://drive.google.com/file/d/1qhckW0RjmD82cZaAHIYfyODImj2PlNRF/view?usp=drive_link" mat-raised-button
+        color="primary">
+        Tabla de conversion horas</a>
+      <a href="https://drive.google.com/file/d/1LYlIs--LPWiA-SaU9Jk6SF5Rc5FyVn1x/view?usp=drive_link" mat-raised-button
+        color="primary">
+        Instrucciones Libreta</a>
+      <a href="https://docs.google.com/document/d/1CaAFRGCPyxhfLDtJZvqBvJ6lh3a5sxr9/edit?usp=sharing&ouid=103201391362993953479&rtpof=true&sd=true"
+        mat-raised-button color="primary">Como sobrevivir al vuelo a vela</a>
     </div>
   </mat-card>
   <mat-card>
@@ -41,25 +38,21 @@
   <mat-card>
     <h2>Raac Anac</h2>
     <div>
-      <a
-        href="https://www.anac.gov.ar/anac/web/uploads/normativa/raac/raac_vigentes/por_parte/parte-61-10_ago_2015.pdf"
-        mat-raised-button
-        color="primary"
-      >
-        RAAC 61</a
-      >
-      <a href="https://www.argentina.gob.ar/sites/default/files/raac_91.pdf" mat-raised-button color="primary"> RAAC 91</a>
-      <a href="http://www.anac.gov.ar/anac/web/uploads/normativa/raac/raac_vigentes/por_parte/parte-141.pdf" mat-raised-button color="primary">
-        RAAC 141</a
-      >
+      <a href="https://www.anac.gov.ar/anac/web/uploads/normativa/raac/raac_vigentes/por_parte/parte-61-10_ago_2015.pdf"
+        mat-raised-button color="primary">
+        RAAC 61</a>
+      <a href="https://www.argentina.gob.ar/sites/default/files/raac_91.pdf" mat-raised-button color="primary"> RAAC
+        91</a>
+      <a href="http://www.anac.gov.ar/anac/web/uploads/normativa/raac/raac_vigentes/por_parte/parte-141.pdf"
+        mat-raised-button color="primary">
+        RAAC 141</a>
     </div>
   </mat-card>
   <mat-card>
     <h2>Favav</h2>
     <div>
       <a href=" https://www.favav.com.ar/w9/default.aspx" mat-raised-button color="primary">
-        Acceso al sitio web de la Federacion Argentina de Vuelo a Vela</a
-      >
+        Acceso al sitio web de la Federacion Argentina de Vuelo a Vela</a>
     </div>
   </mat-card>
   <mat-card>
@@ -75,9 +68,8 @@
     <div>
       <a href=" https://bit.ly/2BuMFt0" mat-raised-button color="primary"> Esta es la ubicación del campo de vuelo</a>
     </div>
-    <span>
-      Los vuelos de bautismo se realizan los sábados, domingos y feriados ( se abona en efectivo o por transferencia). No hace falta reservar, solo
-      tenés que acercarte al club a partir de las 14 hs, es por orden de llegada!
-    </span>
+    <p>
+      Los vuelos de bautismo se realizan los sábados, domingos y feriados.
+    </p>
   </mat-card>
 </div>
