--- a/src/app/pages/fly-with-us/fly-with-us.component.scss
+++ b/src/app/pages/fly-with-us/fly-with-us.component.scss
@@ -3,24 +3,27 @@ div {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  align-items: stretch;
+  align-items: center;
   mat-card {
     justify-content: center;
+    align-items: center;
     background: #878e91da;
     margin: 1rem 0 1rem 0;
     padding: 0.5rem;
+    max-width: 60vw;
     div {
       display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
       a {
         text-decoration: none;
         margin: 10px;
-        width: 40em;
+        width: 50vw;
+        max-width: 50vw;
         height: 4em;
         display: flex;
         text-align: center;
+        color: black;
       }
     }
   }
