--- a/src/app/pages/gliders/glider/glider.component.scss
+++ b/src/app/pages/gliders/glider/glider.component.scss
@@ -3,7 +3,9 @@ mat-drawer-container {
   mat-drawer {
     background: #878e91da;
     margin: 2rem;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    box-shadow:
+      0 3px 6px rgba(0, 0, 0, 0.16),
+      0 3px 6px rgba(0, 0, 0, 0.23);
   }
   mat-drawer-content {
     mat-card {
@@ -15,7 +17,9 @@ mat-drawer-container {
       }
       img {
         align-self: center;
-        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        box-shadow:
+          0 3px 6px rgba(0, 0, 0, 0.16),
+          0 3px 6px rgba(0, 0, 0, 0.23);
         width: 20rem;
         border-radius: 5px;
       }
@@ -26,6 +30,7 @@ mat-drawer-container {
         text-align: center;
         font-size: 1rem;
         text-decoration: none;
+        color: black;
         img {
           margin: auto;
           box-shadow: 0px 25px 20px -20px rgba(0, 0, 0, 0.45);
