--- a/src/app/pages/welcome/social-card/social-card.component.scss
+++ b/src/app/pages/welcome/social-card/social-card.component.scss
@@ -1,7 +1,7 @@
 mat-card {
   display: flex;
   flex-direction: column;
-  background:  #4d77b6;
+  background: #4d77b6;
   width: fit-content;
   align-items: center;
   padding: 10px;
@@ -10,6 +10,7 @@ mat-card {
     flex-direction: column;
     align-items: center;
     a {
+      color: black;
       margin: 10px;
       text-decoration: none;
       img {
