--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div>
-  <p>Copyright &#169; 2024 by CPT-Systems - </p>
+  <p>Copyright &#169; 2025 by CPT-Systems - V1.0.1 </p>
   <a mat-button href="mailto: clubplaneadores.tandil@gmail.com">
     <img src="./assets/svg/mailwhite.svg" />
     <span>clubplaneadores.tandil&#64;gmail.com</span>
