--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -4,7 +4,8 @@
   <mat-card>
     <h1>Secretaría:</h1>
     <p>Fuerte Independencia N°96</p>
-    <p>Horario: Martes, jueves y sábados de 9 a 13 hs.</p>
+    <p>Horario: Martes y jueves de 13 a 17.</p>
+    <p>Sábados de 9 a 13 hs.</p>
     <p>Teléfono (0249) 443-2633</p>
   </mat-card>
   <app-social-card></app-social-card>
